tooling/nargo_cli/tests/snapshots/execution_success/struct_inputs/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
mod foo {
    pub(crate) mod bar {
        global N: Field = 0x02;

        pub(crate) struct barStruct {
            pub(crate) val: Field,
            pub(crate) array: [Field; 2],
            pub(crate) message: str<5>,
        }
    }

    pub(crate) struct fooStruct {
        pub(crate) bar_struct: bar::barStruct,
        pub(crate) baz: Field,
    }
}

struct myStruct {
    foo: u32,
    bar: Field,
    message: str<5>,
}

fn main(x: Field, y: pub myStruct, z: pub foo::bar::barStruct, a: pub foo::fooStruct) -> pub Field {
    let struct_from_bar: foo::bar::barStruct =
        foo::bar::barStruct { val: 1_Field, array: [0_Field, 1_Field], message: "hello" };
    check_inner_struct(a, z);
    for i in 0_u32..struct_from_bar.array.len() {
        assert(struct_from_bar.array[i] == z.array[i]);
    }
    assert(z.val == struct_from_bar.val);
    assert((struct_from_bar.val * x) == x);
    assert(x != y.bar);
    assert(y.message == "hello");
    assert(a.bar_struct.message == struct_from_bar.message);
    a.bar_struct.array[1_u32]
}

fn check_inner_struct(a: foo::fooStruct, z: foo::bar::barStruct) {
    assert(a.bar_struct.val == z.val);
    for i in 0_u32..a.bar_struct.array.len() {
        assert(a.bar_struct.array[i] == z.array[i]);
    }
}
