tooling/nargo_cli/tests/snapshots/execution_success/struct_inputs/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: Field, v1: u32, v2: Field, v3: [u8; 5], v4: Field, v5: [Field; 2], v6: [u8; 5], v7: Field, v8: [Field; 2], v9: [u8; 5], v10: Field):
    (no terminator instruction)
}
[struct_inputs] Circuit output: 0x01
